--- a/css/main.css
+++ b/css/main.css
@@ -20,18 +20,19 @@ div {
 
  .btn {
    padding: .4em;
- }
+   font-size: 1.25rem;
+}
 
 .btn-small {
-  padding: .3em;
+  font-size: .875rem;
 }
 
 .btn-big {
-  padding: .75em;
+  font-size: 1.5rem;
 }
 
 .btn-subtle {
-background-color: #ccc;
+  background-color: #ccc;
 }
 
 .btn-subtle:hover {
