--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   font: normal 100%/1.5 sans-serif;
+  margin: 0;
 }
 
 *, *::before, *::after {
@@ -16,8 +17,11 @@ div {
   border-radius: 8px;
   background-color: #333;
   display: inline-block;
-  padding: .4em;
-  font-size: 1.25rem;
+  padding: .5em;
+  padding-left: .75em;
+  padding-right: .75em;
+  font-size: 1.125rem;
+  border-width: .3px;
 }
 
 .btn:hover {
